# DebuggyDuckyMCP

./: Dockerfile  INTELLIGENT_CODE_AGENT_GUIDE.md  MCP_INSPECTOR_GUIDE.md  README.md  docker-compose.yml  enhanced_code_agent.py  implementation.md  main.py  mcp.json  mcp_agentic_server.py  pyproject.toml  requirements.txt  run_mcp_server.py  run_server.sh  simple_greeting.py  test_code_example.py
mcp/models/: __init__.py  agent.py
mcp_system/: __init__.py  mcp_server.py
mcp_system/config/: __init__.py  logging.py  settings.py
mcp_system/models/: context.py  task.py  trace.py
scripts/: setup_dev.sh
tests/: conftest.py  test_api.py  test_models.py
